policies/kubernetes/worker-nodes/custom-3.2.2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cis-3-2-2-authorization-mode-not-alwaysallow
  annotations:
    policies.kyverno.io/category: CIS 3.2.2
    policies.kyverno.io/description: |
      Audit for bindings that grant cluster-wide permissions, which may indicate an "AlwaysAllow" authorization mode. Partial coverage, as some settings are outside Kyverno's scope.
spec:
  validationFailureAction: Audit
  rules:
    - name: disallow-cluster-admin-binding
      match:
        resources:
          kinds:
            - ClusterRoleBinding
            - RoleBinding
      validate:
        message: "Bindings should not grant cluster-admin or wildcard permissions."
        pattern:
          roleRef:
            name: "!cluster-admin"
