tests/kubernetes/custom-3.2.2/compliant/rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: compliant-rolebinding
  namespace: test-namespace
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: limited-role
subjects:
- kind: ServiceAccount
  name: test-sa
  namespace: test-namespace
